added profiles and fixed production issue